<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.BKDDemo.Toolbar"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />



        <TextView
            android:id="@+id/txtLogoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:drawablePadding="10dp"
            android:text="@string/about_logo_description"
            android:textColor="@color/white"
            app:drawableTopCompat="@drawable/ic_logo" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageButton
        android:id="@+id/btnQuestionMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="20dp"
        android:src="@drawable/ic_question_mark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/rlBottomBar"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/about_screen_sides_margin"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/about_sdk_description"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtTestBakoderSDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/test_barkoder_sdk_background"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/about_test_barkoder_sdk"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/about_screen_sides_margin"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="30dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/recent_header_background"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp">

                <TextView
                    android:id="@+id/txtDeviceId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/about_screen_sides_margin"
                android:layout_marginVertical="20dp"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:id="@+id/llChangeLogContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/recent_header_background"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp">

                    <TextView
                        android:id="@+id/txtSdkVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/about_sdk_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtLibVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/about_lib_title"
                        android:textStyle="bold"
                        tools:visibility="visible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="10dp"
                        android:text="@string/about_changelog_title"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/rlBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/about_screen_sides_margin"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txtLearnMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/learn_more_background"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="13dp"
            android:paddingVertical="10dp"
            android:text="@string/about_learn_more"
            android:textAlignment="center"
            android:textColor="@color/accent_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txtPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/learn_more_background"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/about_privacy_policy"
            android:textAlignment="center"
            android:textColor="@color/accent_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txtTermsOfUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/learn_more_background"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="11dp"
            android:paddingVertical="10dp"
            android:text="@string/about_terms_of_use"
            android:textAlignment="center"
            android:textColor="@color/accent_color"
            android:textSize="13sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
